Keep offsets integral.

--- a/dx.html
+++ b/dx.html
@@ -1186,8 +1186,8 @@ function noticeOrder(s) {
           var touchX = e.touches[0].clientX - touchStartX;
           var touchY = e.touches[0].clientY - touchStartY;
 
-          xoff = touchX/zoom + initialx;
-          yoff = touchY/zoom + initialy;
+          xoff = Math.floor(touchX/zoom + initialx + 0.5);
+          yoff = Math.floor(touchY/zoom + initialy + 0.5);
           doanim(ispinching ? 0 : 1);
         }
 
@@ -1229,8 +1229,8 @@ function noticeOrder(s) {
           var touchX = e.clientX - touchStartX;
           var touchY = e.clientY - touchStartY;
 
-          xoff = touchX/zoom + initialx;
-          yoff = touchY/zoom + initialy;
+          xoff = Math.floor(touchX/zoom + initialx + 0.5);
+          yoff = Math.floor(touchY/zoom + initialy + 0.5);
           doanim(1);
         }
         activate_ui();
