slider thumb update

--- a/dx.html
+++ b/dx.html
@@ -1462,7 +1462,7 @@ var cr = [[], [], [], [],
       }
 
       input[type="range"]::-webkit-slider-thumb {
-        -webkit-appearance: none;
+        /* -webkit-appearance: none; */
         appearance: none;
         background-color: #000000;
         height: 3vw;
@@ -1470,26 +1470,6 @@ var cr = [[], [], [], [],
         border-radius: 1.6vw;
         border: 2px solid rgb(255, 255, 255);
         margin-top: 0px;
-      }
-
-      input[type="range"]::-moz-range-thumb {
-        -webkit-appearance: none;
-        appearance: none;
-        background-color: #000000;
-        height: 3vw;
-        width: 3vw;
-        border-radius: 1.6vw;
-        border: 2px solid rgb(255, 255, 255);
-      }
-
-      input[type="range"]::-ms-thumb {
-        -webkit-appearance: none;
-        appearance: none;
-        background-color: #000000;
-        height: 3vw;
-        width: 3vw;
-        border-radius: 1.6vw;
-        border: 2px solid rgb(255, 255, 255);
       }
 
 
