--- a/dx.html
+++ b/dx.html
@@ -1322,6 +1322,11 @@ var cr = [[], [], [], [],
    }
 
  }
+
+ function toggle_user_guide(){
+   document.getElementById('userguide').style.opacity = Math.abs(1-document.getElementById('userguide').style.opacity);
+ }
+
 </script>
     <style>
 
@@ -1475,7 +1480,39 @@ var cr = [[], [], [], [],
         margin-top: 0px;
       }
 
-      #canvas { position:fixed; left:0;top:0; width:100%; height:100%; z-index: -1; }
+      #canvas { position:fixed; left:0;top:0; width:100%; height:100%; z-index: -1;}
+
+      #userguide {
+        position: fixed;
+        top: 0.8vw;
+        right: 0.8vw;
+        width: 15vw;
+        background-color: #000000;
+        border: 2px solid #4e4e4e;
+        color: #ffffff;
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+        display: block;
+        z-index: 999;
+        opacity: 0;
+        transition: opacity 0.3s;
+      }
+
+      #userguide ul {
+        list-style: none;
+        margin: 0;
+        padding: 0;
+      }
+
+      #userguide li {
+        /* padding: 10px; */
+        padding-left: 10px;
+        padding-right: 10px;
+        padding-top: 5px;
+        padding-bottom: 5px;
+        font: 0.8vw sans-serif;
+      }
+
     </style>
   </head>
 
@@ -1498,12 +1535,37 @@ var cr = [[], [], [], [],
 		  <li id="mi2" onclick="activate_hamburger_menu(), activate_ui(), downloadimage()">Download image</li>
 		  <li id="mi3" onclick="activate_hamburger_menu(), activate_ui(), criticalsnap()">Snap to critical radius</li>
 		  <li id="mi4" onclick="activate_hamburger_menu(), activate_ui(), recolor(false)">Change color style</li>
-		  <!-- <li id="mi7" onclick="activate_hamburger_menu(), activate_ui(), doanim()">Email image (tbd)</li> -->
-        <!-- <li id="mi8" onclick="toggle_scale(), activate_hamburger_menu(), activate_button_container() ,doanim()">Toggle hires scale</li> -->
+		  <!-- <li id="mi8" onclick="activate_hamburger_menu(), activate_ui(), doanim()">Email image (tbd)</li> -->
+        <!-- <li id="mi9" onclick="toggle_scale(), activate_hamburger_menu(), activate_button_container() ,doanim()">Toggle hires scale</li> -->
 		  <li id="mi5" onclick="toggle_pttype(), activate_hamburger_menu(), activate_ui(), doanim()">Toggle point style</li>
 		  <li id="mi6" onclick="toggle_rotype(), update_rot_label(), activate_hamburger_menu(), activate_ui(), doanim()">Toggle rotation style</li>
+        <li id="mi7" onclick="toggle_user_guide()">User guide</li>
 		</ul>
 	  </div>
+
+     <div id="userguide" class="user_guide">
+      <ul>
+         <li><u>Keyboard controls</u></li>
+         <li>Arrow keys: pan</li>
+         <li>[ ]: zoom</li>
+         <!-- <li>c: work harder</li> -->
+         <li>0: return home</li>
+         <li> </li>
+         <li><u>Touch controls</u></li>
+         <li>One finger: pan</li>
+         <li>pinch: zoom</li>
+         <li> </li>
+         <li><u>Buttons</u></li>
+         <li>N<sub>1, 2</sub>: change disc1, disc2 symmetry</li>
+         <li>N: change both discs symmetry</li>
+         <li>R<sub>1, 2</sub>: change disc1, disc2 size</li>
+         <li>R: change both discs size</li>
+         <!-- <li>Keyboard controls</li>
+         <li>Keyboard controls</li> -->
+
+
+      </ul>
+     </div>
 
     <datalist id="steplist">
       <option>2</option>
@@ -1532,7 +1594,7 @@ var cr = [[], [], [], [],
 
 
     <div class="button-container" id="button_container1">
-      <button class="button" id="button1" onclick="onlySlider(1)" style="color: #000000; background-color: #e3e3e3;">R<sub>1</sub></button>
+      <button class="button" id="button1" onclick="onlySlider(1)" style="color: #000000; background-color: #e3e3e3;"><i>r</i><sub>1</sub></button>
       <div class="slide_box" id="slide_box1"  style="display: 'block';">
         <input
           type="range"
@@ -1547,7 +1609,7 @@ var cr = [[], [], [], [],
       </div>
 
 
-      <button class="button" id="button6" onclick="onlySlider(6)" >R<sub> </sub></button>
+      <button class="button" id="button6" onclick="onlySlider(6)" ><i>r</i><sub> </sub></button>
       <div class="slide_box" id="slide_box6">
         <input
           type="range"
@@ -1561,7 +1623,7 @@ var cr = [[], [], [], [],
         />
       </div>
 
-      <button class="button" id="button3" onclick="onlySlider(3)">R<sub>2</sub></button>
+      <button class="button" id="button3" onclick="onlySlider(3)"><i>r</i><sub>2</sub></button>
       <div class="slide_box" id="slide_box3">
         <input
           type="range"
@@ -1575,7 +1637,7 @@ var cr = [[], [], [], [],
         />
       </div>
 
-      <button class="button" id="button2" onclick="onlySlider(2)">N<sub>1</sub></button>
+      <button class="button" id="button2" onclick="onlySlider(2)"><i>n</i><sub>1</sub></button>
       <div class="slide_box" id="slide_box2">
         <input
           type="range"
@@ -1590,7 +1652,7 @@ var cr = [[], [], [], [],
         />
       </div>
 
-      <button class="button" id="button5" onclick="onlySlider(5)">N<sub> </sub></button>
+      <button class="button" id="button5" onclick="onlySlider(5)"><i>n</i><sub> </sub></button>
       <div class="slide_box" id="slide_box5">
         <input
           type="range"
@@ -1606,7 +1668,7 @@ var cr = [[], [], [], [],
       </div>
 
    
-      <button class="button" id="button4" onclick="onlySlider(4)">N<sub>2</sub></button>
+      <button class="button" id="button4" onclick="onlySlider(4)"><i>n</i><sub>2</sub></button>
       <div class="slide_box" id="slide_box4">
         <input
           type="range"
