--- a/dx.html
+++ b/dx.html
@@ -1535,11 +1535,9 @@ var cr = [[], [], [], [],
 		  <li id="mi2" onclick="activate_hamburger_menu(), activate_ui(), downloadimage()">Download image</li>
 		  <li id="mi3" onclick="activate_hamburger_menu(), activate_ui(), criticalsnap()">Snap to critical radius</li>
 		  <li id="mi4" onclick="activate_hamburger_menu(), activate_ui(), recolor(false)">Change color style</li>
-		  <!-- <li id="mi8" onclick="activate_hamburger_menu(), activate_ui(), doanim()">Email image (tbd)</li> -->
-        <!-- <li id="mi9" onclick="toggle_scale(), activate_hamburger_menu(), activate_button_container() ,doanim()">Toggle hires scale</li> -->
-		  <li id="mi5" onclick="toggle_pttype(), activate_hamburger_menu(), activate_ui(), doanim()">Toggle point style</li>
-		  <li id="mi6" onclick="toggle_rotype(), update_rot_label(), activate_hamburger_menu(), activate_ui(), doanim()">Toggle rotation style</li>
-        <li id="mi7" onclick="toggle_user_guide()">User guide</li>
+        <li id="mi5" onclick="toggle_pttype(), activate_hamburger_menu(), activate_ui(), doanim()">Change render style</li>
+		  <li id="mi6" onclick="toggle_rotype(), update_rot_label(), activate_hamburger_menu(), activate_ui(), doanim()">Change rotation type</li>
+        <li id="mi7" onclick="toggle_user_guide()">Show/Hide user guide</li>
 		</ul>
 	  </div>
 
@@ -1556,10 +1554,10 @@ var cr = [[], [], [], [],
          <li>pinch: zoom</li>
          <li> </li>
          <li><u>Buttons</u></li>
-         <li>N<sub>1, 2</sub>: change disc1, disc2 symmetry</li>
-         <li>N: change both discs symmetry</li>
-         <li>R<sub>1, 2</sub>: change disc1, disc2 size</li>
-         <li>R: change both discs size</li>
+         <li><i>n</i><sub>1, 2</sub>: change disc1, disc2 symmetry</li>
+         <li><i>n</i>: change both discs symmetry</li>
+         <li><i>r</i><sub>1, 2</sub>: change disc1, disc2 size</li>
+         <li><i>r</i>: change both discs size</li>
          <!-- <li>Keyboard controls</li>
          <li>Keyboard controls</li> -->
 
