increase dice icon size

--- a/dx.html
+++ b/dx.html
@@ -1680,7 +1680,7 @@ var cr = [[], [], [], [],
           list="steplist"
         />
       </div>
-      <button class="button" id="button7" onclick="dorandom()">&#127922</button>
+      <button class="button" id="button7" onclick="dorandom()" style="font-size: 2vw;">&#127922</button>
 
     </div>
     <a href="" id="downloadlink" style="display: none;"></a>
