fix button rendering issues

--- a/dx.html
+++ b/dx.html
@@ -1362,7 +1362,7 @@ var cr = [[], [], [], [],
         width: 6px;
         height: 6px;
         background-color: #fff;
-        margin: 4px;
+        margin: 3px;
         border-radius: 3px;
       }
 
@@ -1404,12 +1404,12 @@ var cr = [[], [], [], [],
         height: 4.5vw;
         background-color: #333;
         border: none;
-        display: inline-block;
+        display: block;
         margin:0.5vw;
         border-radius: 0.5vw;
-        font: 1.8vw georgia;
+        font: 1.5vw georgia;
         color: white;
-        align-items: center;
+        align-items: normal;
       }
 
       .button-container {
@@ -1608,6 +1608,7 @@ var cr = [[], [], [], [],
 
 
       <button class="button" id="button6" onclick="onlySlider(6)" ><i>r</i><sub> </sub></button>
+      
       <div class="slide_box" id="slide_box6">
         <input
           type="range"
@@ -1680,7 +1681,7 @@ var cr = [[], [], [], [],
           list="steplist"
         />
       </div>
-      <button class="button" id="button7" onclick="dorandom()" style="font-size: 2vw;">&#127922</button>
+      <button class="button" id="button7" onclick="dorandom()">&#127922<sub> </sub></button>
 
     </div>
     <a href="" id="downloadlink" style="display: none;"></a>
