--- a/dx.html
+++ b/dx.html
@@ -57,7 +57,13 @@ var ar, br, an, bn, sep, ax, ay, bx, by, arar, brbr, sepd2 ;
  */
 function toggle_pttype() {
    pttype = 3 - pttype;
+   if (pttype == 1){
+      updateValue('mi5', "Image boundary");
+   } else if (pttype == 2) {
+      updateValue('mi5', "Image full discs");
+   }
 }
+
 function toggle_scale() {
    obeyscale = 1 - obeyscale;
 }
@@ -1316,10 +1322,12 @@ var cr = [[], [], [], [],
 
  function update_rot_label(){
    if (dofull){
-      updateValue('labelcontainer2', 'Full Compound Symmetry Group')
+      updateValue('labelcontainer2', 'Full Compound Symmetry Group');
+      updateValue('mi6', 'Simulate simple generator');
    }
    else{
-      updateValue('labelcontainer2', "gen = a b'")
+      updateValue('labelcontainer2', "gen = a b'");
+      updateValue('mi6', 'Simulate compound symmetry');
    }
 
  }
@@ -1379,7 +1387,7 @@ var cr = [[], [], [], [],
         position: fixed;
         bottom: 6.5vw;
         right: 0.8vw;
-        width: 13vw;
+        width: 15.5vw;
         background-color: #000000;
         border: 2px solid #4e4e4e;
         color: #fff;
@@ -1399,7 +1407,7 @@ var cr = [[], [], [], [],
       }
       #menu li {
         padding: 10px;
-        font: 1.1vw sans-serif;
+        font: 1vw sans-serif;
       }
       #menu li:hover {
         background-color: #636363;
@@ -1543,9 +1551,9 @@ var cr = [[], [], [], [],
 		  <li id="mi1" onclick="activate_hamburger_menu(), activate_ui(), togglefullscreen()">Fullscreen</li>
 		  <li id="mi2" onclick="activate_hamburger_menu(), activate_ui(), downloadimage()">Download image</li>
 		  <li id="mi3" onclick="activate_hamburger_menu(), activate_ui(), criticalsnap()">Snap to critical radius</li>
-		  <li id="mi4" onclick="activate_hamburger_menu(), activate_ui(), recolor(false)">Change color style</li>
-        <li id="mi5" onclick="toggle_pttype(), activate_hamburger_menu(), activate_ui(), doanim()">Change render style</li>
-		  <li id="mi6" onclick="toggle_rotype(), update_rot_label(), activate_hamburger_menu(), activate_ui(), doanim()">Change rotation type</li>
+		  <li id="mi4" onclick="activate_hamburger_menu(), activate_ui(), recolor(false)">New color pallete</li>
+        <li id="mi5" onclick="toggle_pttype(), activate_hamburger_menu(), activate_ui(), doanim()">Image boundary</li>
+		  <li id="mi6" onclick="toggle_rotype(), update_rot_label(), activate_hamburger_menu(), activate_ui(), doanim()">Simulate simple generator</li>
         <li id="mi7" onclick="toggle_user_guide()">Show/Hide user guide</li>
 		</ul>
 	  </div>
