Update language for labelcontainer2

--- a/dx.html
+++ b/dx.html
@@ -1342,7 +1342,7 @@ var cr = [[], [], [], [],
       updateValue('mi6', 'Simulate simple generator');
    }
    else{
-      updateValue('labelcontainer2', "gen = a b'");
+      updateValue('labelcontainer2', "generator = a b'");
       updateValue('mi6', 'Simulate compound symmetry');
    }
 
