--- a/dx.html
+++ b/dx.html
@@ -1407,7 +1407,7 @@ var cr = [[], [], [], [],
  function update_rot_label(){
    if (dofull){
       updateValue('labelcontainer2', 'Full Compound Symmetry Group');
-      updateValue('mi6', 'Simulate simple generator');
+      updateValue('mi6', 'Simulate single generator');
    }
    else{
       updateValue('labelcontainer2', "generator = a b'");
@@ -1445,8 +1445,8 @@ var cr = [[], [], [], [],
         position: fixed;
         bottom: 0.5vw;
         right: 0.5vw;
-        width: 4vw;
-        height: 4vw;
+        width: 4.5vw;
+        height: 4.5vw;
         background-color: #000000;
         border: 2px solid #4e4e4e;
         border-radius: 17%;
@@ -1587,7 +1587,7 @@ var cr = [[], [], [], [],
         position: fixed;
         top: 0.8vw;
         right: 0.8vw;
-        width: 15vw;
+        width: 15.5vw;
         background-color: #000000;
         border: 2px solid #4e4e4e;
         color: #ffffff;
@@ -1611,7 +1611,7 @@ var cr = [[], [], [], [],
         padding-right: 10px;
         padding-top: 5px;
         padding-bottom: 5px;
-        font: 0.8vw sans-serif;
+        font: 0.9vw sans-serif;
       }
 
     </style>
@@ -1632,12 +1632,12 @@ var cr = [[], [], [], [],
 
     <div id="menu">
 		<ul>
-		  <li id="mi1" onclick="activate_hamburger_menu(), activate_ui(), togglefullscreen()">Fullscreen</li>
+		  <li id="mi1" onclick="activate_hamburger_menu(), activate_ui(), togglefullscreen()">Full screen</li>
 		  <li id="mi2" onclick="activate_hamburger_menu(), activate_ui(), downloadimage()">Download image</li>
 		  <li id="mi3" onclick="activate_hamburger_menu(), activate_ui(), criticalsnap()">Snap to critical radius</li>
 		  <li id="mi4" onclick="activate_hamburger_menu(), activate_ui(), recolor(false)">New color pallete</li>
         <li id="mi5" onclick="toggle_pttype(), activate_hamburger_menu(), activate_ui(), doanim()">Image boundary</li>
-		  <li id="mi6" onclick="toggle_rotype(), update_rot_label(), activate_hamburger_menu(), activate_ui(), doanim()">Simulate simple generator</li>
+		  <li id="mi6" onclick="toggle_rotype(), update_rot_label(), activate_hamburger_menu(), activate_ui(), doanim()">Simulate single generator</li>
         <li id="mi7" onclick="toggle_user_guide()">Show/Hide user guide</li>
 		</ul>
 	  </div>
@@ -1652,13 +1652,13 @@ var cr = [[], [], [], [],
          <li> </li>
          <li><u>Touch controls</u></li>
          <li>One finger: pan</li>
-         <li>pinch: zoom</li>
+         <li>Pinch: zoom</li>
          <li> </li>
          <li><u>Buttons</u></li>
-         <li><i>n</i><sub>1, 2</sub>: change disc1, disc2 symmetry</li>
-         <li><i>n</i>: change both discs symmetry</li>
-         <li><i>r</i><sub>1, 2</sub>: change disc1, disc2 size</li>
-         <li><i>r</i>: change both discs size</li>
+         <li><i>n</i><sub>1, 2</sub>: change disc1, 2 symmetry</li>
+         <li><i>n</i>: change symmetry of both discs</li>
+         <li><i>r</i><sub>1, 2</sub>: change disc1, 2 size</li>
+         <li><i>r</i> : change size of both discs</li>
          <!-- <li>Keyboard controls</li>
          <li>Keyboard controls</li> -->
 
