Removed code that sets the query string.

--- a/dx.html
+++ b/dx.html
@@ -254,7 +254,7 @@ function doanim(typ) {
        }
        xcent = 0.5 * (sep + br - ar) ;
     }
-    setquerystring();
+//  setquerystring();
     sc = Math.min(((height-2*marg)*zoom)/4.3, ((width-2 * marg)*zoom)/6.3);
     firstpts = 0 ;
     ay = scale * yoff * zoom + height / 2;
