--- a/dx.html
+++ b/dx.html
@@ -43,6 +43,7 @@ var stopped = true;
 var dofull = true;
 var stoptime;
 var setmax;
+var max_zoom = 25;
 var timelim = 13; // max work milliseconds per anim call
 var largeayes, largebyes, smallano, smallbno, wps, ws, wns, wne ;
 var mincirc = 2 ;
@@ -1176,10 +1177,10 @@ case 'zoom':
             return;
          }
          if (e.keyCode === "]".codePointAt(0)) {
-            if (zoom < 20) {
+            if (zoom < max_zoom) {
                zoom = zoom * 1.25 ;
-               if (zoom > 20) {
-                  zoom = 20 ;
+               if (zoom > max_zoom) {
+                  zoom = max_zoom ;
                }
                doanim() ;
             }
@@ -1329,7 +1330,7 @@ case 'zoom':
             zoom = initialzoom*scale;
 
 
-            if (zoom > 20) {zoom = 20;}
+            if (zoom > max_zoom) {zoom = max_zoom;}
             if (zoom < 0.5) { zoom = 0.5 ;}
             doanim();
          }
